--- a/app/src/main/res/layout/send.xml
+++ b/app/src/main/res/layout/send.xml
@@ -11,7 +11,8 @@
 
     <RadioGroup
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:id="@+id/rgAnswers">
 
         <RadioButton
             android:layout_width="wrap_content"
