--- a/app/src/main/res/menu/cool_menu.xml
+++ b/app/src/main/res/menu/cool_menu.xml
@@ -6,5 +6,7 @@
         android:alphabeticShortcut="a"/>
     <item android:title="Preferences"
         android:id="@+id/preferences"/>
+    <item android:title="Exit"
+        android:id="@+id/exit"/>
 
 </menu>
